se agregan las librerías de material y materialize, se agregan estilos a las tarjetas con el menú

--- a/src/app/modules/board-order/board-order.component.html
+++ b/src/app/modules/board-order/board-order.component.html
@@ -1,3 +1,7 @@
-<p>
-  burguer queen is open!
-</p>
+<div *ngFor="let item of menuList">
+    <mz-card class="cardMenu">
+        <mz-card-content>
+            {{item.name}}
+        </mz-card-content>
+    </mz-card>
+</div>
